@@ -1,3 +1,11 @@
+2002-04-23  Shawn  <sabetts@vcn.bc.ca>
+
+	* nethack.el (nethack): reset status variables
+
+	* nethack-api.el (nethack-reset-status): new function
+	(nethack-status-attribute-Score): new variable
+	(nethack-api-print-glyph): change arguments to reflect C source.
+
 2002-04-10  Ryan Yeske  <rcyeske@vcn.bc.ca>
 
 	* Makefile (dist): Add rule.
